<resources>
    <string name="app_name">SootheMe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logoapp">Logo Aplikasi</string>
    <string name="username">Masukkan Username</string>
    <string name="elemen_gambar">elemen gambar</string>
    <string name="login_word">Login</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="password">Masukkan Password</string>
    <string name="email">Masukkan Email</string>
    <string name="login_toregis">Tidak Punya Akun? <font color="#FF8A00"><b>Register</b></font></string>
    <string name="regis_tologin">Sudah Punya Akun? <font color="#FF8A00"><b>Log In</b></font></string>
    <string name="waktu">Waktu</string>
    <string name="calendar">Calendar</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="soothebot">SootheBot</string>
    <string name="bedtime">Bedtime Story</string>
    <string name="soothemusic">SootheMesic</string>
    <string name="consultation">Consultation</string>
    <string name="soothebot_1">Hello! \n I\'m Soothebot~</string>
    <string name="soothebot_2">How Can I Help\nYou?</string>
    <string name="cb_button">Tap me!</string>
    <string name="fill_field">Harap isi bidang kosong!</string>
    <string name="password_email_error">Harap isi email dan password dengan benar!</string>
    <string name="register_success">Register Berhasil!</string>
    <string name="register_failed">Register Gagal!</string>
    <string name="login_success">Login Berhasil!</string>
    <string name="login_failed">Login Gagal!</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="story_name">Story Name</string>
    <string name="author">Author</string>
    <string name="desc">Description</string>
    <string name="cover_buku">Cover Buku</string>
    <string name="read_here">Read the Story Here:</string>
    <string name="share">Click Me!</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
</resources>