<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color4"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/color2"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/clock_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:text="@string/waktu"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/date_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="0dp"
                    android:text="@string/calendar"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_user"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/foto_profil"
                    android:scaleType="centerCrop"
                    android:src="@drawable/name" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/hello_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hello, ..."
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="How are you feeling, today?"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

            <RadioGroup
                android:id="@+id/rg_emot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_emot_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/angry"
                    android:drawablePadding="8dp" />

                <RadioButton
                    android:id="@+id/rb_emot_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/frown"
                    android:drawablePadding="8dp" />

                <RadioButton
                    android:id="@+id/rb_emot_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/neutral"
                    android:drawablePadding="8dp" />

                <RadioButton
                    android:id="@+id/rb_emot_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/smile"
                    android:drawablePadding="8dp" />

                <RadioButton
                    android:id="@+id/rb_emot_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/happy"
                    android:drawablePadding="8dp" />

            </RadioGroup>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_bot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_click"
        android:elevation="15dp"
        android:gravity="center"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/soothebot"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/arrow_right"
        app:drawableStartCompat="@drawable/chatbot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/tv_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_click"
        android:elevation="15dp"
        android:gravity="center"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/bedtime"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/arrow_right"
        app:drawableStartCompat="@drawable/book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bot" />

    <TextView
        android:id="@+id/tv_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_click"
        android:elevation="15dp"
        android:gravity="center"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/soothemusic"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/arrow_right"
        app:drawableStartCompat="@drawable/music"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_story" />

    <TextView
        android:id="@+id/tv_consultation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_click"
        android:elevation="15dp"
        android:gravity="center"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/consultation"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/arrow_right"
        app:drawableStartCompat="@drawable/consul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_music" />

    <ImageView
        android:layout_width="360dp"
        android:layout_height="176dp"
        android:contentDescription="@string/elemen_gambar"
        android:src="@drawable/element"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/loading_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/loading_bar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>